# paymonWallet-android

./: .gitignore  build.gradle  local.properties
app/: .gitignore  CMakeLists.txt  build.gradle  google-services.json
app/libs/boringssl/build-android/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
app/libs/boringssl/build-android/crypto/: cmake_install.cmake  refcount_test  thread_test
app/libs/boringssl/build-android/decrepit/: cmake_install.cmake
app/libs/boringssl/build-android/fipsoracle/: cmake_install.cmake
app/libs/boringssl/build-android/ssl/: cmake_install.cmake
app/libs/boringssl/build-android/tool/: cmake_install.cmake
app/libs/boringssl/crypto/: cpu-arm-linux.c  crypto.c  ex_data.c  internal.h  thread_test.c
app/libs/boringssl/fipsoracle/: cavp_aes_gcm_test.cc  cavp_aes_test.cc  cavp_ctr_drbg_test.cc  cavp_ecdsa2_keypair_test.cc  cavp_ecdsa2_pkv_test.cc  cavp_ecdsa2_siggen_test.cc  cavp_ecdsa2_sigver_test.cc  cavp_hmac_test.cc  cavp_keywrap_test.cc  cavp_main.cc  cavp_rsa2_keygen_test.cc  cavp_rsa2_siggen_test.cc  cavp_rsa2_sigver_test.cc  cavp_sha_monte_test.cc  cavp_sha_test.cc  cavp_tdes_test.cc
app/libs/boringssl/ssl/: d1_both.c  d1_lib.c  d1_pkt.c  d1_srtp.c  dtls_method.c  dtls_record.c  handshake_client.c  handshake_server.c  internal.h  s3_both.c  s3_lib.c  s3_pkt.c  ssl_cert.c  ssl_cipher.c  ssl_file.c  ssl_lib.c  ssl_privkey.c  ssl_session.c  ssl_stat.c  ssl_test.cc  ssl_transcript.c  ssl_x509.c  t1_enc.c  t1_lib.c  tls13_both.c  tls13_client.c  tls13_enc.c  tls13_server.c  tls_record.c
app/libs/boringssl/tool/: client.cc  digest.cc  server.cc  speed.cc  transport_common.cc
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BuffersStorage.cpp  ByteArray.cpp  ByteStream.cpp  ByteStream.h  ClassStore.cpp  ClassStore.h  Connection.cpp  Connection.h  EventObject.h  FileLog.cpp  FileLog.h  KeyGenerator.cpp  KeyGenerator.h  NetworkManager.cpp  NetworkManager.h  Packet.cpp  Packet.h  PaymonWrapper.cpp  PaymonWrapper.h  RPC.cpp  RPC.h  SerializedBuffer.cpp  SerializedBuffer.h  Socket.cpp  Socket.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  jni.c
(+977 files in other folders)
